<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.kaleo.ui.login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_24sdp"
            android:paddingRight="@dimen/_24sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_32sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/caricon" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@color/colorWhite"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorSecondaryText" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@color/colorWhite"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorSecondaryText" />


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@color/colorPrimaryDark"
                android:elevation="4dp"
                android:padding="@dimen/_16sdp"
                android:text="@string/btn_login"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/forgotten_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_12sdp"
                android:gravity="center"
                android:text="Forgot Password?"
                android:padding="@dimen/_4sdp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent" />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_12sdp"
                android:gravity="center"
                android:text="Or Login With"
                android:padding="@dimen/_4sdp"
                android:textSize="24sp"
            android:textStyle="bold"
                android:textColor="@color/colorBlack" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:orientation="horizontal">

                <!-- Twitter -->
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:src="@drawable/google"

                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Image" />

                <!-- Facebook -->
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:src="@drawable/facebook"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Image" />

                <!-- Google -->
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/twitter"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Image" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/link_to_registration"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/btn_link_to_register"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

</LinearLayout>
